# Job-Description-Analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pipeline.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: Tests.yml
api/: .dockerignore  API_test.py  Dockerfile  JobAnalyze_API.py  pred.py  supabase_client.py
backups/: backup.py  sync.py
cli/: api_val.py  jobauto.py  jobselect.py  main_screen.py  model_select.py  test_cli.py  utils.py
data/clean/: cleaned_job_descriptions.csv  cleaned_job_descriptions_internships.csv  cleaned_job_descriptions_junior.csv  cleaned_job_descriptions_senior.csv
data/raw/: Job_descriptions.csv
data/sample_data/: cli.txt  eval.txt  test.txt
frontend/repo/: favicon.b64.txt
model/: MODEL.md  __init__.py  eval.py  model.py  pred.py
model/prep/: data_prep.py  label_vocab.json  prepared_data.npz  sym_map.py  test.py  vectorizer.pkl
model_out/: skill_classifier.pt  training_history.json
notebooks/: 01_EDA.ipynb  02_Data_Engineering.ipynb
test/: test_model.py
