[project]
name = "JobAuto"
version = "0.10.1"
dependencies = [
  "rich==15.0.0",
  "pyfiglet==1.0.4"
]

# CLI entrypoint
[project.scripts]
jobauto = "cli.jobauto:cli"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "model*", "model_out*"]
exclude = ["data*", "notebooks*", "test*"]

[tool.setuptools.package-data]
"model.prep" = ["label_vocab.json", "vectorizer.pkl", "prepared_data.npz"]
"model_out" = ["skill_classifier.pt", "training_history.json"]
